samples/_failures_safe/1761188748_985bed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f12f5b6.c: In function ‘main’:
./samples/SAFE/__tmp_3f12f5b6.c:144:17: error: expected expression at end of input
  144 |                 for (int j =
      |                 ^~~
./samples/SAFE/__tmp_3f12f5b6.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f12f5b6.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f12f5b6.c:144:17: error: expected declaration or statement at end of input
